# NRIOOP

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies_Base.xml  Dependencies_Framework.xml  Dependencies_Samples.xml  ShaderCompilation.cmake
Samples/: 01_Triangle.cpp  CMakeLists.txt
Samples/Shaders/: 01_Triangle.fs.hlsl  01_Triangle.vs.hlsl  BindingBridge.hlsli
Source/: CMakeLists.txt
Source/Base/: AccelerationStructure.h  Base.cpp  Base.h  BaseDLL.h  Buffer.h  CMakeLists.txt  CommandAllocator.h  CommandBuffer.h  CommandQueue.h  Descriptor.h  DescriptorPool.h  DescriptorSet.h  Device.h  DeviceSemaphore.h  FrameBuffer.h  Memory.h  Pipeline.h  PipelineLayout.h  QueryPool.h  QueueSemaphore.h  SwapChain.h  Texture.h
Source/Base/Helpers/: HelperDataUpload.cpp  HelperDataUpload.h  HelperDeviceMemoryAllocator.cpp  HelperDeviceMemoryAllocator.h  HelperResourceStateChange.cpp  HelperResourceStateChange.h  HelperWaitIdle.cpp  HelperWaitIdle.h
Source/Common/: CMakeLists.txt  CommonDLL.h  Lock.h  SharedLibrary.cpp  SharedLibrary.h  StdAllocator.h
Source/D3D11/: BufferD3D11.cpp  BufferD3D11.h  CMakeLists.txt  CommandAllocatorD3D11.cpp  CommandAllocatorD3D11.h  CommandBufferD3D11.cpp  CommandBufferD3D11.h  CommandBufferEmuD3D11.cpp  CommandBufferEmuD3D11.h  CommandQueueD3D11.cpp  CommandQueueD3D11.h  D3D11DLL.h  D3D11Extensions.cpp  D3D11Extensions.h  DescriptorD3D11.cpp  DescriptorD3D11.h  DescriptorPoolD3D11.cpp  DescriptorPoolD3D11.h  DescriptorSetD3D11.cpp  DescriptorSetD3D11.h  DeviceD3D11.cpp  DeviceD3D11.h  DeviceSemaphoreD3D11.cpp  DeviceSemaphoreD3D11.h  FrameBufferD3D11.cpp  FrameBufferD3D11.h  MemoryD3D11.cpp  MemoryD3D11.h  PipelineD3D11.cpp  PipelineD3D11.h  PipelineLayoutD3D11.cpp  PipelineLayoutD3D11.h  QueryPoolD3D11.cpp  QueryPoolD3D11.h  QueueSemaphoreD3D11.cpp  QueueSemaphoreD3D11.h  SharedD3D11.cpp  SharedD3D11.h  SwapChainD3D11.cpp  SwapChainD3D11.h  (+2 more)
Source/D3D12/: AccelerationStructureD3D12.cpp  AccelerationStructureD3D12.h  BufferD3D12.cpp  BufferD3D12.h  CMakeLists.txt  CommandAllocatorD3D12.cpp  CommandAllocatorD3D12.h  CommandBufferD3D12.cpp  CommandBufferD3D12.h  CommandQueueD3D12.cpp  CommandQueueD3D12.h  ConversionD3D12.cpp  D3D12DLL.h  DescriptorD3D12.cpp  DescriptorD3D12.h  DescriptorPoolD3D12.cpp  DescriptorPoolD3D12.h  DescriptorSetD3D12.cpp  DescriptorSetD3D12.h  DeviceD3D12.cpp  DeviceD3D12.h  DeviceSemaphoreD3D12.h  FrameBufferD3D12.h  MemoryD3D12.h  PipelineD3D12.cpp  PipelineD3D12.h  PipelineLayoutD3D12.cpp  PipelineLayoutD3D12.h  QueryPoolD3D12.cpp  QueryPoolD3D12.h  QueueSemaphoreD3D12.h  SharedD3D12.h  SwapChainD3D12.cpp  SwapChainD3D12.h  TextureD3D12.cpp  TextureD3D12.h
Source/D3DCommon/: CMakeLists.txt  D3DCommonDLL.h  Helpers.cpp  Helpers.h
Source/DeviceManager/: CMakeLists.txt  DeviceCreation.cpp  DeviceCreation.h  DeviceManagerDLL.h
Source/Framework/: CMakeLists.txt  Camera.cpp  Camera.h  FrameworkDLL.h  Helper.cpp  Helper.h  SampleBase.cpp  SampleBase.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
Source/VK/: AccelerationStructureVK.cpp  AccelerationStructureVK.h  BaseVK.cpp  BaseVK.h  BufferVK.cpp  BufferVK.h  CMakeLists.txt  CommandAllocatorVK.cpp  CommandAllocatorVK.h  CommandBufferVK.cpp  CommandBufferVK.h  CommandQueueVK.cpp  CommandQueueVK.h  DescriptorPoolVK.cpp  DescriptorPoolVK.h  DescriptorSetVK.cpp  DescriptorSetVK.h  DescriptorVK.cpp  DescriptorVK.h  DeviceSemaphoreVK.cpp  DeviceSemaphoreVK.h  DeviceVK.cpp  DeviceVK.h  FrameBufferVK.cpp  FrameBufferVK.h  MemoryVK.cpp  MemoryVK.h  PipelineLayoutVK.cpp  PipelineLayoutVK.h  PipelineVK.cpp  PipelineVK.h  QueryPoolVK.cpp  QueryPoolVK.h  QueueSemaphoreVK.cpp  QueueSemaphoreVK.h  SharedVK.h  SwapChainVK.cpp  SwapChainVK.h  TextureVK.cpp  TextureVK.h  (+1 more)
Source/Validation/: AccelerationStructureVal.cpp  AccelerationStructureVal.h  BufferVal.cpp  BufferVal.h  CMakeLists.txt  CommandAllocatorVal.cpp  CommandAllocatorVal.h  CommandBufferVal.cpp  CommandBufferVal.h  CommandQueueVal.cpp  CommandQueueVal.h  ConversionVal.cpp  DescriptorPoolVal.cpp  DescriptorPoolVal.h  DescriptorSetVal.cpp  DescriptorSetVal.h  DescriptorVal.cpp  DescriptorVal.h  DeviceSemaphoreVal.cpp  DeviceSemaphoreVal.h  DeviceVal.cpp  DeviceVal.h  FrameBufferVal.cpp  FrameBufferVal.h  MemoryVal.cpp  MemoryVal.h  PipelineLayoutVal.cpp  PipelineLayoutVal.h  PipelineVal.cpp  PipelineVal.h  QueryPoolVal.cpp  QueryPoolVal.h  QueueSemaphoreVal.cpp  QueueSemaphoreVal.h  SharedVal.cpp  SharedVal.h  SwapChainVal.cpp  SwapChainVal.h  TextureVal.cpp  TextureVal.h  (+1 more)
