file(GLOB NRI_COMMON_HEADERS "*.h" "*.hpp")
file(GLOB NRI_COMMON_IMP "*.cpp")

source_group("" FILES ${NRI_COMMON_HEADERS})
source_group("" FILES ${NRI_COMMON_IMP})

set (NRI_COMMON_SOURCES ${NRI_COMMON_HEADERS} ${NRI_COMMON_IMP})

set (NRI_COMMON_COMPILE_DEFINITIONS ${NRI_COMPILE_DEFINITIONS})
set (NRI_COMMON_COMPILE_OPTIONS ${NRI_COMPILE_OPTIONS})

if (NRI_STATIC_LIBRARY)
    add_library(NRICommon STATIC ${NRI_COMMON_SOURCES})
    set (NRI_COMMON_COMPILE_DEFINITIONS ${NRI_COMMON_COMPILE_DEFINITIONS} NRI_STATIC_LIBRARY NRI_COMMON_EXPORTS=0)
else()
    add_library(NRICommon SHARED ${NRI_COMMON_SOURCES})
    set (NRI_COMMON_COMPILE_DEFINITIONS ${NRI_COMMON_COMPILE_DEFINITIONS} NRI_COMMON_EXPORTS=1)
endif()

if (UNIX)
    target_link_libraries(NRICommon PRIVATE ${CMAKE_DL_LIBS})
endif()

target_include_directories(NRICommon PUBLIC .)
target_compile_definitions(NRICommon PRIVATE ${NRI_COMMON_COMPILE_DEFINITIONS})
target_compile_options(NRICommon PRIVATE ${NRI_COMMON_COMPILE_OPTIONS})
set_property(TARGET NRICommon PROPERTY FOLDER "NRI") 