file(GLOB NRI_D3D11_HEADERS "*.h" "*.hpp")
file(GLOB NRI_D3D11_IMP "*.cpp")

source_group("" FILES ${NRI_D3D11_HEADERS})
source_group("" FILES ${NRI_D3D11_IMP})

set (NRI_D3D11_SOURCES ${NRI_D3D11_HEADERS} ${NRI_D3D11_IMP})

set (NRI_D3D11_COMPILE_DEFINITIONS ${NRI_COMPILE_DEFINITIONS} NRI_USE_D3D11=1)
set (NRI_D3D11_COMPILE_OPTIONS ${NRI_COMPILE_OPTIONS})

if (NRI_STATIC_LIBRARY)
    add_library(NRID3D11 STATIC ${NRI_D3D11_SOURCES})
    set (NRI_D3D11_COMPILE_DEFINITIONS ${NRI_D3D11_COMPILE_DEFINITIONS} NRI_STATIC_LIBRARY NRI_D3D11_EXPORTS=0)
else()
    add_library(NRID3D11 SHARED ${NRI_D3D11_SOURCES})
    set (NRI_D3D11_COMPILE_DEFINITIONS ${NRI_D3D11_COMPILE_DEFINITIONS} NRI_D3D11_EXPORTS=1)
endif()

if (UNIX)
    target_link_libraries(NRID3D11 PRIVATE ${CMAKE_DL_LIBS})
endif()

target_link_libraries(NRID3D11 PUBLIC NRICommon NRIBase NRID3DCommon ${NRI_INPUT_LIB_D3D11} ${NRI_INPUT_LIB_DXGI} ${NRI_INPUT_LIB_DXGUID} ${NRI_INPUT_LIB_NVAPI})

target_include_directories(NRID3D11 PUBLIC . ${NRI_ROOT_DIR}/External)
target_compile_definitions(NRID3D11 PRIVATE ${NRI_D3D11_COMPILE_DEFINITIONS})
target_compile_options(NRID3D11 PRIVATE ${NRI_D3D11_COMPILE_OPTIONS})
set_property(TARGET NRID3D11 PROPERTY FOLDER "NRI") 