file(GLOB NRI_D3D12_HEADERS "*.h" "*.hpp")
file(GLOB NRI_D3D12_IMP "*.cpp")

source_group("" FILES ${NRI_D3D12_HEADERS})
source_group("" FILES ${NRI_D3D12_IMP})

set (NRI_D3D12_SOURCES ${NRI_D3D12_HEADERS} ${NRI_D3D12_IMP})

set (NRI_D3D12_COMPILE_DEFINITIONS ${NRI_COMPILE_DEFINITIONS} NRI_USE_D3D12=1)
set (NRI_D3D12_COMPILE_OPTIONS ${NRI_COMPILE_OPTIONS})

if (NRI_STATIC_LIBRARY)
    add_library(NRID3D12 STATIC ${NRI_D3D12_SOURCES})
    set (NRI_D3D12_COMPILE_DEFINITIONS ${NRI_D3D12_COMPILE_DEFINITIONS} NRI_STATIC_LIBRARY NRI_D3D12_EXPORTS=0)
else()
    add_library(NRID3D12 SHARED ${NRI_D3D12_SOURCES})
    set (NRI_D3D12_COMPILE_DEFINITIONS ${NRI_D3D12_COMPILE_DEFINITIONS} NRI_D3D12_EXPORTS=1)
endif()

if (UNIX)
    target_link_libraries(NRID3D12 PRIVATE ${CMAKE_DL_LIBS})
endif()

target_link_libraries(NRID3D12 PUBLIC NRICommon NRIBase NRID3DCommon ${NRI_INPUT_LIB_D3D12} ${NRI_INPUT_LIB_DXGI})

target_include_directories(NRID3D12 PUBLIC . ${NRI_ROOT_DIR}/External)
target_compile_definitions(NRID3D12 PRIVATE ${NRI_D3D12_COMPILE_DEFINITIONS})
target_compile_options(NRID3D12 PRIVATE ${NRI_D3D12_COMPILE_OPTIONS})
set_property(TARGET NRID3D12 PROPERTY FOLDER "NRI")