file(GLOB NRI_D3D_COMMON_HEADERS "*.h" "*.hpp")
file(GLOB NRI_D3D_COMMON_IMP "*.cpp")

source_group("" FILES ${NRI_D3D_COMMON_HEADERS})
source_group("" FILES ${NRI_D3D_COMMON_IMP})

set (NRI_D3D_COMMON_SOURCES ${NRI_D3D_COMMON_HEADERS} ${NRI_D3D_COMMON_IMP})

set (NRI_D3D_COMMON_COMPILE_DEFINITIONS ${NRI_COMPILE_DEFINITIONS})
set (NRI_D3D_COMMON_COMPILE_OPTIONS ${NRI_COMPILE_OPTIONS})

if (NRI_STATIC_LIBRARY)
    add_library(NRID3DCommon STATIC ${NRI_D3D_COMMON_SOURCES})
    set (NRI_D3D_COMMON_COMPILE_DEFINITIONS ${NRI_D3D_COMMON_COMPILE_DEFINITIONS} NRI_STATIC_LIBRARY NRI_D3D_COMMON_EXPORTS=0)
else()
    add_library(NRID3DCommon SHARED ${NRI_D3D_COMMON_SOURCES})
    set (NRI_D3D_COMMON_COMPILE_DEFINITIONS ${NRI_D3D_COMMON_COMPILE_DEFINITIONS} NRI_D3D_COMMON_EXPORTS=1)
endif()

if (UNIX)
    target_link_libraries(NRID3DCommon PRIVATE ${CMAKE_DL_LIBS})
endif()

target_link_libraries(NRID3DCommon PUBLIC NRIBase ${NRI_INPUT_LIB_DXGI} ${NRI_INPUT_LIB_DXGUID} ${NRI_INPUT_LIB_NVAPI})

target_include_directories(NRID3DCommon PUBLIC .)
target_compile_definitions(NRID3DCommon PRIVATE ${NRI_D3D_COMMON_COMPILE_DEFINITIONS})
target_compile_options(NRID3DCommon PRIVATE ${NRI_D3D_COMMON_COMPILE_OPTIONS})
set_property(TARGET NRID3DCommon PROPERTY FOLDER "NRI") 