file(GLOB NRI_VALIDATION_HEADERS "*.h" "*.hpp")
file(GLOB NRI_VALIDATION_IMP "*.cpp")

source_group("" FILES ${NRI_VALIDATION_HEADERS})
source_group("" FILES ${NRI_VALIDATION_IMP})

set (NRI_VALIDATION_SOURCES ${NRI_VALIDATION_HEADERS} ${NRI_VALIDATION_IMP})

set (NRI_VALIDATION_COMPILE_DEFINITIONS ${NRI_COMPILE_DEFINITIONS})
set (NRI_VALIDATION_COMPILE_OPTIONS ${NRI_COMPILE_OPTIONS})

if (NRI_STATIC_LIBRARY)
    add_library(NRIValidation STATIC ${NRI_VALIDATION_SOURCES})
    set (NRI_VALIDATION_COMPILE_DEFINITIONS ${NRI_VALIDATION_COMPILE_DEFINITIONS} NRI_STATIC_LIBRARY NRI_VALIDATION_EXPORTS=0)
else()
    add_library(NRIValidation SHARED ${NRI_VALIDATION_SOURCES})
    set (NRI_VALIDATION_COMPILE_DEFINITIONS ${NRI_VALIDATION_COMPILE_DEFINITIONS} NRI_VALIDATION_EXPORTS=1)
endif()

if (UNIX)
    target_link_libraries(NRIValidation PRIVATE ${CMAKE_DL_LIBS})
endif()

target_link_libraries(NRIValidation PUBLIC NRIBase)

target_include_directories(NRIValidation PUBLIC .)
target_compile_definitions(NRIValidation PRIVATE ${NRI_VALIDATION_COMPILE_DEFINITIONS})
target_compile_options(NRIValidation PRIVATE ${NRI_VALIDATION_COMPILE_OPTIONS})
set_property(TARGET NRIValidation PROPERTY FOLDER "NRI") 